--- a/index.html
+++ b/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
     <style>
         .text-class {
             font-size: 90px;
-            color: red;
+            color: blue;
+        }
+        .img { 
+            height: 100px;
+            width: 100px;
+        }
+        .img-class {
+            background-image: url('./img/image.jpg');
+            height: 200px;
+            background-repeat: repeat;
         }
     </style>
 </head>
 <body>
+   <div>header</div>
+    <script src="/components/header.html"></script>
     <div class="text-class">
         HOLA MUNDO
     </div>
+    <div class="text-class-red">
+        HOLA MUNDO
+    </div>
+    <div class="img-class">hey</div>
+    <img class="img" src="img/image.jpg"></div>
 </body>
-<script>
-    alert('hola corris')
-</script>
+<script type="text/javascript" src="index.js"></script>
 </html>
