--- a/index.html
+++ b/index.html
@@ -1,37 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <style>
-        .text-class {
-            font-size: 90px;
-            color: blue;
+        * {
+            box-sizing: border-box;
         }
-        .img { 
-            height: 100px;
-            width: 100px;
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background: #f0f0f0;
         }
-        .img-class {
-            background-image: url('./img/image.jpg');
-            height: 200px;
-            background-repeat: repeat;
+
+        .slider-container {
+            width: 100%;
+            overflow: hidden;
+            position: relative;
+            padding: 20px 0;
+        }
+
+        .slider-track {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .slide {
+            min-width: calc(100% / 3);
+            box-sizing: border-box;
+            height: 400px;
+        }
+
+        .slide img {
+            width: 100%;
+            border-radius: 15px;
+            display: block;
+            height: 400px;
+            object-fit: cover;
+        }
+
+        .dots {
+            text-align: center;
+            margin-top: 10px;
+            position: absolute;
+            bottom: 30px;
+            left: calc(50% - 50px);
+        }
+
+        .dot {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            margin: 0 5px;
+            background-color: #ccc;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .dot.active {
+            background-color: #333;
+        }
+
+        @media (max-width: 768px) {
+            .slide {
+                min-width: calc(100% / 2);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .slide {
+                min-width: 100%;
+            }
         }
     </style>
 </head>
+
 <body>
-   <div>header</div>
-    <script src="/components/header.html"></script>
-    <div class="text-class">
-        HOLA MUNDO
+    <div class="slider-container">
+        <div class="slider-track" id="sliderTrack">
+            <div class="slide"><img src="img/image.jpg" alt="1"></div>
+            <div class="slide"><img src="img/image.jpg" alt="2"></div>
+            <div class="slide"><img src="img/image.jpg" alt="3"></div>
+            <div class="slide"><img src="img/image.jpg" alt="4"></div>
+            <div class="slide"><img src="img/image.jpg" alt="5"></div>
+        </div>
+
+        <div class="dots" id="dots"></div>
     </div>
-    <div class="text-class-red">
-        HOLA MUNDO
-    </div>
-    <div class="img-class">hey</div>
-    <img class="img" src="img/image.jpg"></div>
+
 </body>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript">
+
+    const track = document.getElementById('sliderTrack');
+    const slides = document.querySelectorAll('.slide');
+    const dotsContainer = document.getElementById('dots');
+    const visibleSlides = 3;
+    const totalSteps = slides.length - visibleSlides + 1;
+    let current = 0;
+
+    // Create dots
+    for (let i = 0; i < totalSteps; i++) {
+        const dot = document.createElement('span');
+        dot.classList.add('dot');
+        if (i === 0) dot.classList.add('active');
+        dot.dataset.index = i;
+        dot.addEventListener('click', () => {
+            current = i;
+            updateSlider();
+        });
+        dotsContainer.appendChild(dot);
+    }
+
+    function updateSlider() {
+        const slideWidth = slides[0].offsetWidth + 20; // 10px padding on each side
+        track.style.transform = `translateX(-${slideWidth * current}px)`;
+        document.querySelectorAll('.dot').forEach(dot => dot.classList.remove('active'));
+        if (dotsContainer.children[current])
+            dotsContainer.children[current].classList.add('active');
+    }
+
+    // Autoplay
+    setInterval(() => {
+        current = (current + 1) % totalSteps;
+        updateSlider();
+    }, 3000);
+</script>
+
 </html>
