--- a/delatierraatumesa/index.html
+++ b/delatierraatumesa/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="promo">
-        <h1 class="promo-title">"De la tierra a tu mesa,<br> calidad que puedes ver y sentir"</h1>
+        <h1 class="promo-title">"De la tierra a tu mesaaaa,<br> calidad que puedes ver y sentir"</h1>
         <p class="promo-note">
             Todos nuestros productos están disponibles <strong>exclusivamente para compradores mayoristas, cadenas
                 comerciales y distribuidores profesionales.</strong> Contáctanos para conocer disponibilidad, volúmenes
