--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         body {
             margin: 0;
             padding: 0;
@@ -17,6 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="components/navbar/style.css">
     <link rel="stylesheet" href="components/banner/style.css">
     <link rel="stylesheet" href="components/delatierraatumesa/style.css">
     <link rel="stylesheet" href="components/calidad/style.css">
@@ -29,6 +33,7 @@
 </head>
 
 <body>
+    <div id="navbar"></div>
     <div id="banner"></div>
     <div id="delatierraatumesa"></div>
     <div id="calidad"></div>
