--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="components/productos/style.css">
     <link rel="stylesheet" href="components/reviews/style.css">
     <link rel="stylesheet" href="components/contactanos/style.css">
+    <link rel="stylesheet" href="components/footer/style.css">
     <!-- <link rel="stylesheet" href="components/nosotros/style.css"> -->
 </head>
 
@@ -42,6 +43,7 @@
     <div id="productos"></div>
     <div id="reviews"></div>
     <div id="contactanos"></div>
+    <div id="footer"></div>
 </body>
 
 <script type="text/javascript" async  src="js/layout.js"></script>
